--- a/src/main/resources/META-INF/spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/spring-configuration-metadata.json
@@ -2,36 +2,36 @@
   "hints": [],
   "groups": [
     {
-      "sourceType": "io.github.easyprofiler.autoconfigure.EasyProfilerConfigurationProperties",
+      "sourceType": "org.acegroup.watchtower.web.autoconfigure.EasyProfilerConfigurationProperties",
       "name": "easy-profiler",
-      "type": "io.github.easyprofiler.autoconfigure.EasyProfilerConfigurationProperties"
+      "type": "org.acegroup.watchtower.web.autoconfigure.EasyProfilerConfigurationProperties"
     },
     {
-      "sourceType": "io.github.easyprofiler.autoconfigure.EasyProfilerConfigurationProperties",
+      "sourceType": "org.acegroup.watchtower.web.autoconfigure.EasyProfilerConfigurationProperties",
       "name": "easy-profiler.enableBasic",
       "sourceMethod": "isEnableBasic()",
       "type": "java.lang.Integer"
     },
     {
-      "sourceType": "io.github.easyprofiler.autoconfigure.EasyProfilerConfigurationProperties",
+      "sourceType": "org.acegroup.watchtower.web.autoconfigure.EasyProfilerConfigurationProperties",
       "name": "easy-profiler.username",
       "sourceMethod": "getUsername()",
       "type": "java.lang.String"
     },
     {
-      "sourceType": "io.github.easyprofiler.autoconfigure.EasyProfilerConfigurationProperties",
+      "sourceType": "org.acegroup.watchtower.web.autoconfigure.EasyProfilerConfigurationProperties",
       "name": "easy-profiler.password",
       "sourceMethod": "getPassword()",
       "type": "java.lang.String"
     },
     {
-      "sourceType": "io.github.easyprofiler.autoconfigure.EasyProfilerConfigurationProperties",
+      "sourceType": "org.acegroup.watchtower.web.autoconfigure.EasyProfilerConfigurationProperties",
       "name": "easy-profiler.basePackage",
       "sourceMethod": "getBasePackage()",
       "type": "java.lang.String"
     },
     {
-      "sourceType": "io.github.easyprofiler.autoconfigure.EasyProfilerConfigurationProperties",
+      "sourceType": "org.acegroup.watchtower.web.autoconfigure.EasyProfilerConfigurationProperties",
       "name": "easy-profiler.excludeClass",
       "sourceMethod": "getExcludeClass()",
       "type": "java.lang.String"
