--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,10 +10,7 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ "dev" ]
-  pull_request:
-    branches: [ "dev" ]
-
+    branches: [ "dev","master" ]
 jobs:
   build:
 
