--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,5 +24,7 @@ jobs:
       with:
         java-version: '17'
         cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+        distribution: 'temurin'
+    - name: test with Maven
+      run: mvn test --file pom.xml
+      
