--- a/legacy-easy-profiler/pom.xml
+++ b/legacy-easy-profiler/pom.xml
@@ -60,6 +60,11 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>io.opentelemetry</groupId>
+            <artifactId>opentelemetry-api</artifactId>
+            <version>1.22.0</version>
+        </dependency>
 
     </dependencies>
 
